submitting the pre-work

--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
 
 .stats-container {
     display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.stats-container:hover {
+    box-shadow: 0 0 30px lightblue;
 }
 
 .stats-card {
@@ -57,6 +63,15 @@ body {
     border-radius: 7px;
 }
 
+.game-card .name {
+    font-weight: bold;
+    padding: 10px 0px;
+}
+
+.game-card .content {
+    padding: 10px 0px;
+}
+
 .game-card:hover {
     cursor: pointer;
     box-shadow: 0 0 30px lightblue;
@@ -72,4 +87,5 @@ button {
     padding: 1%;
     margin: 1%;
     border-radius: 7px;
+    cursor: pointer;
 }
